fix: update openapi
