# javascript/src/openapi/models/GetGasStationDepositAddressReply.ts
@@ -1,0 +1,39 @@
+/**
+ * WaaS OpenAPI Documentation
+ * This is a WaaS OpenAPI Server.
+ *
+ * OpenAPI spec version: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { HttpFile } from '../http/http';
+
+export class GetGasStationDepositAddressReply {
+    /**
+    * Deposit Addresses
+    */
+    'addresses'?: Array<string>;
+
+    static readonly discriminator: string | undefined = undefined;
+
+    static readonly mapping: {[index: string]: string} | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
+        {
+            "name": "addresses",
+            "baseName": "addresses",
+            "type": "Array<string>",
+            "format": ""
+        }    ];
+
+    static getAttributeTypeMap() {
+        return GetGasStationDepositAddressReply.attributeTypeMap;
+    }
+
+    public constructor() {
+    }
+}
