# javascript/src/openapi/models/all.ts
@@ -24,7 +24,7 @@ export * from '../models/EstimateFeeResponse'
 export * from '../models/EventType'
 export * from '../models/Fee'
 export * from '../models/GasStation'
-export * from '../models/GetGasStationDepositAddressRequest'
+export * from '../models/GetGasStationDepositAddressReply'
 export * from '../models/ModelError'
 export * from '../models/SignMessageRequest'
 export * from '../models/SignMessageRequestSource'
