# javascript/src/openapi/types/ObservableAPI.ts
@@ -28,7 +28,7 @@ import { EstimateFeeResponse } from '../models/EstimateFeeResponse';
 import { EventType } from '../models/EventType';
 import { Fee } from '../models/Fee';
 import { GasStation } from '../models/GasStation';
-import { GetGasStationDepositAddressRequest } from '../models/GetGasStationDepositAddressRequest';
+import { GetGasStationDepositAddressReply } from '../models/GetGasStationDepositAddressReply';
 import { ModelError } from '../models/ModelError';
 import { SignMessageRequest } from '../models/SignMessageRequest';
 import { SignMessageRequestSource } from '../models/SignMessageRequestSource';
@@ -106,11 +106,11 @@ export class ObservableAddressesApi {
     /**
      * Validate addresses
      * Validate addresses
-     * @param addresses Addresses
      * @param chainId Chain ID
+     * @param addresses Addresses
      */
-    public v1AddressesValidateWithHttpInfo(addresses: Array<string>, chainId: string, _options?: Configuration): Observable<HttpInfo<ValidateAddressesReply>> {
-        const requestContextPromise = this.requestFactory.v1AddressesValidate(addresses, chainId, _options);
+    public v1AddressesValidateWithHttpInfo(chainId: string, addresses: Array<string>, _options?: Configuration): Observable<HttpInfo<ValidateAddressesReply>> {
+        const requestContextPromise = this.requestFactory.v1AddressesValidate(chainId, addresses, _options);
 
         // build promise chain
         let middlewarePreObservable = from<RequestContext>(requestContextPromise);
@@ -131,11 +131,11 @@ export class ObservableAddressesApi {
     /**
      * Validate addresses
      * Validate addresses
-     * @param addresses Addresses
      * @param chainId Chain ID
+     * @param addresses Addresses
      */
-    public v1AddressesValidate(addresses: Array<string>, chainId: string, _options?: Configuration): Observable<ValidateAddressesReply> {
-        return this.v1AddressesValidateWithHttpInfo(addresses, chainId, _options).pipe(map((apiResponse: HttpInfo<ValidateAddressesReply>) => apiResponse.data));
+    public v1AddressesValidate(chainId: string, addresses: Array<string>, _options?: Configuration): Observable<ValidateAddressesReply> {
+        return this.v1AddressesValidateWithHttpInfo(chainId, addresses, _options).pipe(map((apiResponse: HttpInfo<ValidateAddressesReply>) => apiResponse.data));
     }
 
     /**
@@ -420,10 +420,12 @@ export class ObservableGasStationsApi {
     /**
      * Get or create a deposit address for a gas station
      * Get or create deposit address
-     * @param getGasStationDepositAddressRequest Request body
+     * @param chainId Chain ID
+     * @param [walletId] Wallet ID
+     * @param [body]
      */
-    public v1GasStationsGetOrCreateDepositAddressWithHttpInfo(getGasStationDepositAddressRequest: GetGasStationDepositAddressRequest, _options?: Configuration): Observable<HttpInfo<string>> {
-        const requestContextPromise = this.requestFactory.v1GasStationsGetOrCreateDepositAddress(getGasStationDepositAddressRequest, _options);
+    public v1GasStationsGetOrCreateDepositAddressWithHttpInfo(chainId: string, walletId?: string, body?: any, _options?: Configuration): Observable<HttpInfo<GetGasStationDepositAddressReply>> {
+        const requestContextPromise = this.requestFactory.v1GasStationsGetOrCreateDepositAddress(chainId, walletId, body, _options);
 
         // build promise chain
         let middlewarePreObservable = from<RequestContext>(requestContextPromise);
@@ -444,10 +446,12 @@ export class ObservableGasStationsApi {
     /**
      * Get or create a deposit address for a gas station
      * Get or create deposit address
-     * @param getGasStationDepositAddressRequest Request body
+     * @param chainId Chain ID
+     * @param [walletId] Wallet ID
+     * @param [body]
      */
-    public v1GasStationsGetOrCreateDepositAddress(getGasStationDepositAddressRequest: GetGasStationDepositAddressRequest, _options?: Configuration): Observable<string> {
-        return this.v1GasStationsGetOrCreateDepositAddressWithHttpInfo(getGasStationDepositAddressRequest, _options).pipe(map((apiResponse: HttpInfo<string>) => apiResponse.data));
+    public v1GasStationsGetOrCreateDepositAddress(chainId: string, walletId?: string, body?: any, _options?: Configuration): Observable<GetGasStationDepositAddressReply> {
+        return this.v1GasStationsGetOrCreateDepositAddressWithHttpInfo(chainId, walletId, body, _options).pipe(map((apiResponse: HttpInfo<GetGasStationDepositAddressReply>) => apiResponse.data));
     }
 
     /**
